# apollo_perception

./: CMakeLists.txt  README.md  generator_proto.sh
cyber/: CMakeLists.txt
cyber/base/: CMakeLists.txt
cyber/common/: CMakeLists.txt  log.h
cyber/proto/: choreography_conf.pb.cc  choreography_conf.pb.h  classic_conf.pb.cc  classic_conf.pb.h  clock.pb.cc  clock.pb.h  component_conf.pb.cc  component_conf.pb.h  cyber_conf.pb.cc  cyber_conf.pb.h  dag_conf.pb.cc  dag_conf.pb.h  parameter.pb.cc  parameter.pb.h  perf_conf.pb.cc  perf_conf.pb.h  proto_desc.pb.cc  proto_desc.pb.h  qos_profile.pb.cc  qos_profile.pb.h  record.pb.cc  record.pb.h  role_attributes.pb.cc  role_attributes.pb.h  run_mode_conf.pb.cc  run_mode_conf.pb.h  scheduler_conf.pb.cc  scheduler_conf.pb.h  topology_change.pb.cc  topology_change.pb.h  transport_conf.pb.cc  transport_conf.pb.h  unit_test.pb.cc  unit_test.pb.h
modules/perception/base_test/: CMakeLists.txt  blob_demo.cc  box_demo.cc  camera_demo.cc
modules/perception/common/: CMakeLists.txt
modules/perception/lib/: CMakeLists.txt
modules/perception/lidar/lib/: CMakeLists.txt
modules/perception/lidar/lib/classifier/: CMakeLists.txt
modules/perception/lidar/lib/dummy/: CMakeLists.txt
modules/perception/lidar/lib/ground_detector/: CMakeLists.txt
modules/perception/lidar/lib/ground_detector/ground_service_detector/proto/: ground_service_detector_config.pb.cc  ground_service_detector_config.pb.h
modules/perception/lidar/lib/ground_detector/spatio_temporal_ground_detector/proto/: spatio_temporal_ground_detector_config.pb.cc  spatio_temporal_ground_detector_config.pb.h
modules/perception/lidar/lib/map_manager/: CMakeLists.txt
modules/perception/lidar/lib/object_builder/: CMakeLists.txt
modules/perception/lidar/lib/object_filter_bank/proto/: filter_bank_config.pb.cc  filter_bank_config.pb.h
modules/perception/lidar/lib/pointcloud_preprocessor/: CMakeLists.txt
modules/perception/lidar/lib/pointcloud_preprocessor/proto/: pointcloud_preprocessor_config.pb.cc  pointcloud_preprocessor_config.pb.h
modules/perception/lidar/lib/roi_filter/: CMakeLists.txt
modules/perception/lidar/lib/roi_filter/hdmap_roi_filter/proto/: hdmap_roi_filter.pb.cc  hdmap_roi_filter.pb.h
modules/perception/lidar/lib/scene_manager/: CMakeLists.txt
modules/perception/lidar/lib/scene_manager/ground_service/proto/: ground_service_config.pb.cc  ground_service_config.pb.h
modules/perception/lidar/lib/scene_manager/proto/: scene_manager_config.pb.cc  scene_manager_config.pb.h
modules/perception/lidar/lib/scene_manager/roi_service/proto/: roi_service.pb.cc  roi_service.pb.h
modules/perception/lidar/lib/segmentation/: CMakeLists.txt
modules/perception/lidar/lib/segmentation/cnnseg/: CMakeLists.txt
modules/perception/lidar/lib/segmentation/cnnseg/proto/: cnnseg_config.pb.cc  cnnseg_config.pb.h  cnnseg_param.pb.cc  cnnseg_param.pb.h  spp_engine_config.pb.cc  spp_engine_config.pb.h
modules/perception/lidar/lib/segmentation/cnnseg/spp_engine/: CMakeLists.txt  spp_struct.cc
modules/perception/lidar/lib/segmentation/ncut/proto/: ncut_config.pb.cc  ncut_config.pb.h  ncut_param.pb.cc  ncut_param.pb.h
(+58 files in other folders)
