add_subdirectory(classifier)
add_subdirectory(detection)
add_subdirectory(dummy)
add_subdirectory(ground_detector)
add_subdirectory(interface)
add_subdirectory(map_manager)
add_subdirectory(object_builder)
add_subdirectory(object_filter_bank)
add_subdirectory(pointcloud_preprocessor)
add_subdirectory(roi_filter)
add_subdirectory(scene_manager)
add_subdirectory(segmentation)
add_subdirectory(tracker)